fix spacing with podcast titles

--- a/mediaplex/public/styles/podcasts.css
+++ b/mediaplex/public/styles/podcasts.css
@@ -75,7 +75,7 @@
 .innerbox-list li .title {
 	color: #b1d1ef;
 	margin-right: 5px;
-	font: bold 14px/18px Tahoma, sans-serif;
+	font: bold 14px/14px Tahoma, sans-serif;
 	float: left;
 }
 .innerbox-list li a:link,
